@@ -17,11 +17,7 @@
 			label="COM_MEDIA_FIELD_MAXIMUM_SIZE_LABEL"
 			description="COM_MEDIA_FIELD_MAXIMUM_SIZE_DESC" />
 
-		<field name="spacer1" type="spacer"
-			hr="true"
-		/>
-
-		<field name="spacer2" type="spacer" class="text"
+		<field name="spacer1" type="spacer" class="text"
 			label="COM_MEDIA_FOLDERS_PATH_LABEL"
 		/>
 
@@ -40,10 +36,6 @@
 			default="images"
 			label="COM_MEDIA_FIELD_PATH_IMAGE_FOLDER_LABEL"
 			description="COM_MEDIA_FIELD_PATH_IMAGE_FOLDER_DESC" />
-
-		<field name="spacer3" type="spacer"
-			hr="true"
-		/>
 
 		<field
 			name="restrict_uploads"
